@@ -6,7 +6,9 @@ SPHINXOPTS   =
 SPHINXBUILD  = python ../sphinx-build.py
 PAPER        =
 
-ALLSPHINXOPTS = -d _build/doctrees -D latex_paper_size=$(PAPER) \
+PAPEROPT_a4      = -D latex_paper_size=a4
+PAPEROPT_letter  = -D latex_paper_size=letter
+ALLSPHINXOPTS = -d _build/doctrees $(PAPEROPT_$(PAPER)) \
                 $(SPHINXOPTS) .
 
 .PHONY: help clean html web htmlhelp latex changes linkcheck
